# nrf52833-pac

./: .gitignore  Cargo.toml  README.md
src/: aar.rs  ccm.rs  clock.rs  egu0.rs  generic.rs  nfct.rs  nvmc.rs  power.rs  pwm0.rs  saadc.rs  usbd.rs
src/aar/: events_notresolved.rs
src/ccm/: mode.rs  rateoverride.rs  tasks_rateoverride.rs
src/clock/: events_ctstarted.rs  events_ctstopped.rs  events_hfclkstarted.rs  events_lfclkstarted.rs  tasks_hfclkstart.rs  tasks_lfclkstart.rs  traceconfig.rs
src/comp/: extrefsel.rs
src/egu0/: events_triggered.rs
src/gpiote/: config.rs
src/nfct/: events_autocolresstarted.rs  events_collision.rs  events_fielddetected.rs  events_fieldlost.rs  events_rxframeend.rs  events_rxframestart.rs  events_txframeend.rs  events_txframestart.rs  framedelaymode.rs  inten.rs  intenclr.rs  intenset.rs  modulationctrl.rs  shorts.rs  tasks_enablerxdata.rs
src/nvmc/: erasepagepartial.rs
src/power/: events_sleepenter.rs  events_sleepexit.rs  events_usbdetected.rs  events_usbpwrrdy.rs  events_usbremoved.rs  pofcon.rs
src/pwm0/: events_loopsdone.rs  events_pwmperiodend.rs  events_seqstarted.rs  prescaler.rs  shorts.rs
src/qdec/: events_reportrdy.rs  events_samplerdy.rs  shorts.rs  tasks_readclracc.rs
src/radio/: cteinlineconf.rs  dfectrl1.rs  events_ccastopped.rs  events_ctepresent.rs  events_edstopped.rs  events_framestart.rs  events_rateboost.rs  shorts.rs
src/rtc0/: tasks_trigovrflw.rs
src/saadc/: events_calibratedone.rs  events_resultdone.rs  tasks_calibrateoffset.rs
src/timer0/: bitmode.rs
src/twi0/: events_suspended.rs
(+13 files in other folders)
